# utility

./: .gitignore  README.md  comparison_results.csv  main.py  pyproject.toml
examples/data/: agent_assist_tips.csv  guru_cards.csv
src/text_similarity/: __init__.py  cli.py  comparator.py  llm.py  llm_reranker.py  semantic.py  tfidf.py
tests/: conftest.py  test_comparator_tfidf.py  test_llm_mode.py
